--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.0",
-    "psx/psx": "~3.0",
+    "psx/framework": "dev-master",
     "amphp/aerys": "^0.7.0"
   },
   "require-dev": {
