--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 before_script:
   - mysql -e 'create database psx;'
   - pushd public
-  - ../vendor/bin/aerys -d -c index.php &
+  - php index.php &
   - popd
   - sleep 4
 script:
