--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "php": ">=7.0",
     "psx/framework": "^4.0",
-    "amphp/aerys": "^0.7.0"
+    "amphp/http-server": "^0.8.3",
+    "amphp/log": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.6",
