--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
   "require": {
-    "php": ">=7.0",
-    "psx/framework": "^4.0",
-    "amphp/http-server": "^1.0",
-    "amphp/log": "^1.0"
+    "php": ">=7.2",
+    "psx/framework": "^5.0-RC2",
+    "psx/engine-amp": "^0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6.0",
+    "phpunit/phpunit": "^8.0",
     "guzzlehttp/guzzle": "^6.3"
   },
   "autoload-dev": {
     "psr-4": {
       "PSX\\Framework\\App\\": "vendor/psx/framework/app/"
     }
-  }
+  },
+  "minimum-stability": "RC"
 }
