--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: false
 services:
   - mysql
 install:
+  - phpenv config-rm xdebug.ini
   - composer install
 before_script:
   - mysql -e 'create database psx;'
