--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,5 +41,9 @@ jobs:
           mysql -e "ALTER USER 'root'@'localhost' IDENTIFIED WITH mysql_native_password BY 'test1234';" -uroot -proot
       - name: Composer install
         run: composer install --no-interaction --no-ansi --no-progress
+      - name: Run AMP
+        run: cd public && php index.php &
+      - name: Wait
+        run: sleep 4
       - name: Run PHPUnit
         run: SEND=external vendor/bin/phpunit
